--- a/projet/projet/projet.csproj
+++ b/projet/projet/projet.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="Boss.cs" />
     <Compile Include="Case.cs" />
+    <Compile Include="Game.cs" />
     <Compile Include="Joueur.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Menu.cs" />
