--- a/projet/projet/projet.csproj
+++ b/projet/projet/projet.csproj
@@ -43,13 +43,20 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="arme.cs" />
+    <Compile Include="armure.cs" />
     <Compile Include="Boss.cs" />
     <Compile Include="Case.cs" />
+    <Compile Include="chaussure.cs" />
+    <Compile Include="contrebandier.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="Inventaire.cs" />
+    <Compile Include="jedi.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Personnage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="wookie.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
