--- a/projet/projet/projet.csproj
+++ b/projet/projet/projet.csproj
@@ -43,20 +43,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="arme.cs" />
-    <Compile Include="armure.cs" />
-    <Compile Include="Boss.cs" />
-    <Compile Include="Case.cs" />
-    <Compile Include="chaussure.cs" />
-    <Compile Include="contrebandier.cs" />
+    <Compile Include="Joueur\Equipement.cs" />
+    <Compile Include="Item\arme.cs" />
+    <Compile Include="Item\armure.cs" />
+    <Compile Include="Boss\Boss.cs" />
+    <Compile Include="Map\Case.cs" />
+    <Compile Include="Item\chaussure.cs" />
+    <Compile Include="Heros\contrebandier.cs" />
     <Compile Include="Game.cs" />
-    <Compile Include="Inventaire.cs" />
-    <Compile Include="jedi.cs" />
-    <Compile Include="Map.cs" />
-    <Compile Include="Personnage.cs" />
+    <Compile Include="Joueur\Inventaire.cs" />
+    <Compile Include="Item\Item.cs" />
+    <Compile Include="Heros\jedi.cs" />
+    <Compile Include="Map\Map.cs" />
+    <Compile Include="Joueur\Personnage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="wookie.cs" />
+    <Compile Include="Heros\wookie.cs" />
+    <Compile Include="Boss\Stormtrooper.cs" />
+    <Compile Include="Boss\Vador.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
