--- a/projet/projet/projet.csproj
+++ b/projet/projet/projet.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Heros\wookie.cs" />
     <Compile Include="Boss\Stormtrooper.cs" />
     <Compile Include="Boss\Vador.cs" />
+    <Compile Include="Item\Shop.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
